objects/Market_Index__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Price__c</fullName>
        <label>Market Price</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Market Index</relationshipLabel>
        <relationshipName>Market_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Market Index</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Market_Price__c</columns>
        <columns>Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Market Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>